Fix Padding in more section, for correct spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-/*
-GENERIC ELEMENT
-*/
-
-/*Only for a elemnent in footer*/
+/*GENERIC ELEMENT: */
+/*Formatting generic a: Only for a elemnent in footer*/
 a {
     text-decoration: none;
-    color: #6ebb9b;
+    color: #1abc9c;
 }
 
 /*Div with the icon in header and in main*/
@@ -15,7 +12,7 @@ div.my_icon div.my_hr {
     border-radius: 3px;
 }
 
-/*Generic background color*/
+/*Generic background color */
 .bg-primary-green{
     background-color: #1abc9c;
 }
@@ -28,6 +25,7 @@ div.my_icon div.my_hr {
     background-color: #3a546d;
 }
 
+/*Generic border white class*/
 .border-white{
     border: 1px solid white;
 }
@@ -63,6 +61,7 @@ section.portfolio div.my_box>img {
 section.contact_me button:hover {
     background-color: #2d5e49;
 }
+
 /*
                                                             FOOTER
 */
